...
                                <rect key="frame" x="0.0" y="843" width="428" height="49"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="49" id="H7E-cK-fRR"/>
                                </constraints>
                                <items>
                                    <tabBarItem tag="1" title="Library" image="See" id="gc8-cN-HYd"/>
                                    <tabBarItem tag="2" title="Record" image="play.circle.fill" catalog="system" id="IRc-Q2-wFa"/>
                                    <tabBarItem tag="3" title="Effects" image="UpArrow" id="cd6-4f-l3u"/>
                                </items>
                            </tabBar>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="2lG-h2-GMc"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Share" title=""/>
                                <connections>
                                    <action selector="shareFeature:" destination="1vY-wB-ILN" eventType="touchUpInside" id="Tmx-P3-BhE"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRk-nE-QKn">
                                <rect key="frame" x="160.33333333333334" y="44" width="107.33333333333334" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ARC_Large" translatesAutoresizingMaskIntoConstraints="NO" id="OYo-7n-y0Z">
...
            <objects>
                <viewController storyboardIdentifier="signinVC" id="Fg0-Nr-HeX" customClass="SigninViewController" customModule="ARC" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="oYG-EI-X45">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXV-iy-wo4">
                                <rect key="frame" x="50" y="89" width="328" height="42"/>
                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="WBs-5M-f38">
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7h-ge-yCT">
                                        <rect key="frame" x="145.66666666666663" y="0.0" width="182.33333333333337" height="31"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="gray" title="Sign Up">
                                            <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="toSignup:" destination="Fg0-Nr-HeX" eventType="touchUpInside" id="yx8-mk-BqY"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="uBQ-0z-6Zo"/>
...
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="SIGN UP">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                    <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="signup:" destination="O8c-Oz-E9D" eventType="touchUpInside" id="4Xu-yq-WZH"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="tSq-q7-dfs"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
